@@ -26,6 +26,29 @@ static SV *ident_svptr;
 
 #include "const-c.inc"
 
+
+#ifndef LOG_FAC
+#define LOG_FACMASK     0x03f8
+#define LOG_FAC(p)      (((p) & LOG_FACMASK) >> 3)
+#endif
+
+#ifndef	LOG_PRI
+#define	LOG_PRI(p)	((p) & LOG_PRIMASK)
+#endif
+
+#ifndef	LOG_MAKEPRI
+#define	LOG_MAKEPRI(fac, pri)	(((fac) << 3) | (pri))
+#endif
+
+#ifndef LOG_MASK
+#define	LOG_MASK(pri)	(1 << (pri))
+#endif
+
+#ifndef LOG_UPTO
+#define	LOG_UPTO(pri)	((1 << ((pri)+1)) - 1)
+#endif
+
+
 MODULE = Sys::Syslog		PACKAGE = Sys::Syslog		
 
 INCLUDE: const-xs.inc
@@ -34,72 +57,27 @@ int
 LOG_FAC(p)
     INPUT:
 	int		p
-    CODE:
-#ifdef LOG_FAC
-	RETVAL = LOG_FAC(p);
-#else
-	croak("Your vendor has not defined the Sys::Syslog macro LOG_FAC");
-	RETVAL = -1;
-#endif
-    OUTPUT:
-	RETVAL
 
 int
 LOG_PRI(p)
     INPUT:
 	int		p
-    CODE:
-#ifdef LOG_PRI
-	RETVAL = LOG_PRI(p);
-#else
-	croak("Your vendor has not defined the Sys::Syslog macro LOG_PRI");
-	RETVAL = -1;
-#endif
-    OUTPUT:
-	RETVAL
 
 int
 LOG_MAKEPRI(fac,pri)
     INPUT:
 	int		fac
 	int		pri
-    CODE:
-#ifdef LOG_MAKEPRI
-	RETVAL = LOG_MAKEPRI(fac,pri);
-#else
-	croak("Your vendor has not defined the Sys::Syslog macro LOG_MAKEPRI");
-	RETVAL = -1;
-#endif
-    OUTPUT:
-	RETVAL
 
 int
 LOG_MASK(pri)
     INPUT:
 	int		pri
-    CODE:
-#ifdef LOG_MASK
-	RETVAL = LOG_MASK(pri);
-#else
-	croak("Your vendor has not defined the Sys::Syslog macro LOG_MASK");
-	RETVAL = -1;
-#endif
-    OUTPUT:
-	RETVAL
 
 int
 LOG_UPTO(pri)
     INPUT:
 	int		pri
-    CODE:
-#ifdef LOG_UPTO
-	RETVAL = LOG_UPTO(pri);
-#else
-	croak("Your vendor has not defined the Sys::Syslog macro LOG_UPTO");
-	RETVAL = -1;
-#endif
-    OUTPUT:
-	RETVAL
 
 #ifdef HAVE_SYSLOG
 
